add executeJavaScript to close ads